1999-02-04  Christopher Blizzard  <blizzard@redhat.com>

	* gtk+.spec (Packager): Change my email address.

Thu Feb  4 05:42:34 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL
	  NEWS
	  README
	  configure.in
	  gtk+.spec
	  docs/gtk-config.1: version=1.1.15

	* Makefile.am: example files where incorrect for
	  menu directory.

	* Released GTK+ 1.1.15

Wed Feb  3 17:29:57 PST 1999 Manish Singh <yosh@gimp.org>

	* gtk/gtkclist.h: spelling fix in comment from
	joey@kuolema.Infodrom.North.DE (Martin Schulze)

Tue Feb  2 12:39:42 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c: Make sure we set the icon window position 
	 before it is shown to prevent annoying flicking to 0,0.
	 Make it consistent that info->cur_x/y do not include
	 info->hot_x/y displacement.

Tue Feb  2 11:06:02 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c (gtk_range_style_set): Fixes
	 to account for the changed structure of the windows
	 of range widgets.

Tue Feb  2 08:59:16 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml: new sections on Layout and
	  SpinButton [nice widget]

	* examples/spinbutton/*: example code

Mon Feb  1 19:25:54 1999  Owen Taylor  <otaylor@redhat.com>

	* docs/gtk-config.txt (testinput_SOURCES): Put
	in some information about 'gtk-config --libs gthread'.

	* docs/Changes-1.2.txt: Updated section on threads.

Tue Feb  2 00:28:44 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (gtk_ctree_insert_node): in case of
	GTK_SELECTION_BROWSE select first inserted row.
	(resync_selection): select rows in correct order.

	* gtk/gtkclist.c (real_insert_row): in case of GTK_SELECTION_BROWSE
 	select first inserted row.
	(resync_selection): select rows in correct order.

	* gtk/gtklist.c (gtk_list_end_selection): select rows in correct order.

Mon Feb  1 16:47:55 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk.m4: Pass gthread on to gtk-config.

	* configure.in gtk-config.in: Support gthread flag to 